@@ -1,8 +1,10 @@
 package com.duoduo.duoduocampus.model;
 
+import java.io.Serializable;
+
 import com.google.gson.annotations.SerializedName;
 
-public class NewType {
+public class NewType implements Serializable{
 	@SerializedName("typeId")	
 	public String typeId;
 }
