@@ -8,8 +8,9 @@
 			"newType" : {
 				"typeId" : 1
 			},
-			"imgUrl" : "http://img4.cache.netease.com/3g/2015/9/7/2015090706311760252.jpg",
-			"newFor" : 1
+			"newFor" : 1,
+			"newDetailContent" : "<p>　　冒充公检法实施诈骗这是老骗局了，但骗子稍微加一点新花样进去，照样有人上当。南京一市民最近收到一份假的逮捕通知书，结果借了44万元汇到了所谓的“安全账户”；而另一位市民则看到了一个“最高检察院网站”，被骗两万多元。南京秦淮警方提醒广大市民，遭遇所谓公检法机关的电话、短信，第一时间拨打“110”电话核实，就能避免上当。<\/p><p>　　通讯员 秦公轩 赵祥 现代快报记者 陶维洲<\/p><p>　　<b>假逮捕通知书骗走五十多万<\/b><\/p><p>　　9月4日，南京市民李女士正在家中休息，突然接到一个外地电话。对方声称自己是北京民警，发现李女士涉嫌洗钱、贩毒等多项罪名，需要其配合调查。对方还通过传真机向李女士发送了一份“逮捕通知书”。<\/p><p>　　李女士收到逮捕通知书后，发现上面不仅有自己的照片，还有身份证号，不由就相信了对方说的话。“民警”告诉李女士，要洗脱罪名有一个办法，就是将50万元以上的资金汇入“警方的安全账户”接受调查。同时，“民警”警告李女士，称这是公安机密，不得告诉旁人，否则就会立即对李女士进行抓捕。<\/p><p>　　李女士当天下午就去银行取出了自己的存款8万元，之后又从朋友处东拼西凑了44万元。第二天，她便按照“警官”的指示，将52万元存入了“安全账户”。之后，“警官”让她呆在银行等待通知，可李女士等了两个小时也没有对方的电话，当即觉得事情有点不对，拨打110求助。<\/p><p>　　南京秦虹派出所接到报警后，立即派民警赶到现场。民警告诉她，这是典型的诈骗。骗子之所以要她不要告诉别人并呆在银行，就是怕李女士立即报警。经过银行查询，在李女士等待电话的两个小时内，她汇出的钱早已被人转走。<\/p><p>　　目前，秦淮警方已经立案侦查此事。<\/p><p>　　<b>假检察院网站上看到“通缉令”<\/b><\/p><p>　　9月1日上午10点，市民胡小姐在上班过程中，办公室座机接到一个无来电显示的号码。电话中男子自称是某快递员工，并准确说出了胡女士的名字。他告诉胡小姐，其寄往澳门的快递里搜出了8张假的身份证原件，他已经报警，马上将会有上海民警与其通话，说完后对方就挂了电话。果然，5分钟后胡小姐再次接到“民警”电话。他告诉胡小姐，其涉嫌非法洗钱，目前警方已经立案调查，需要胡小姐缴纳一笔保证金防止她逃跑。如果胡小姐不缴纳保证金，警方将立即派人对其抓捕。<\/p><p>　　对于电话那头人的说法，胡小姐并不相信。对方当即给了胡小姐一个网址，称这是最高检察院的网站，上面有胡小姐被“通缉”的信息。将信将疑的胡小姐立即在电脑上输入了这个网址，打开一看果然是“最高检察院官方网站”。此时，这位“警官”提供了一个案件编号给胡小姐，果然，输入案件编号后，网页上出现了一张胡小姐被通缉的图片。胡小姐顿时十分紧张，担心自己被抓，立即按照要求前往银行汇出“保证金”。由于过于紧张，汇款时胡小姐连续输错了两次密码，最终还是将两万余元汇了出去。<\/p><p>　　直到两天后，胡小姐才觉得不对劲，向秦淮警方报案求助。目前警方已立案调查此事。<\/p>",
+			"imgUrl" : "http://img4.cache.netease.com/3g/2015/9/7/2015090706311760252.jpg"
 		},
 		{
 			"newId" : 2,
